fix: tooltip overflow

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -6,6 +6,7 @@ html,
 body,
 [data-overlay-container='true'] {
   height: 100%;
+  overflow: hidden;
 }
 
 #root {
